--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -73,7 +73,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Анонимный чатик Котобаки</a>
+      <a class="navbar-brand" href="index.html">Anonimous chat</a>
     </div>
   </div><!-- /.container-fluid -->
 </nav>
