Add WebSocket for reseiving new messages from server

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,12 +17,11 @@
 	
 		<title>Anonymous chat</title>
 	
-	<!--
+	<!--FONTS-->
+		
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700&subset=cyrillic" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Lobster&subset=cyrillic" rel="stylesheet">
-		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	
-	CSS-->
+	<!--CSS-->
 	
 		<link media="all" type="text/css" href="views/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
 		<link media="all" type="text/css" href="views/css/style.css" rel="stylesheet">
@@ -102,11 +101,10 @@
 
 
 <!--JS-->
-<script src="views/js/jquery.min.js"></script>
-<script src="views/js/handlebars-latest.js"></script>
-<script src="views/js/socket.io.js"></script>
-<script src="views/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
-<script src="views/js/ajax.js"></script>
+	<script src="views/js/jquery.min.js"></script>
+	<script src="views/js/handlebars-latest.js"></script>
+	<script src="views/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+	<script src="views/js/chat.js"></script>
 <!--/JS-->
 
 </body>
